# enterprise-bots

./: .claudeignore  .gitignore  .gitmodules  AGENT_SDK_ANALYSIS.md  ANTHROPIC_BEST_PRACTICES_REVISED.md  ARCHITECTURE_QUICK_REFERENCE.md  CLAUDE.md  CODEBASE_ANALYSIS.md  DESIGN.md  DEV_SETUP.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_BASE_CODE_EXECUTION_GUIDE.md  KNOWLEDGE_BASE_QUICK_REFERENCE.md  QUICK_REFERENCE.md  V0.5.0_INTEGRATION_PLAN.md  V0.5.0_LOCAL_TESTING_GUIDE.md  deploy-claude-code-kb.sh  docker-compose.dev.yml  package-lock.json  setup-local-dev.sh
ai-bot/: .coverage  .dockerignore  .env.example  .env.local.example  .env.test-fallback  .env.test.husanai  .env.test1  .env.test2  .env.test3  .env.testing  .gitignore  AGENT_SDK_INTEGRATION_GUIDE.md  AGENT_SKILLS_FINAL_INVESTIGATION.md  ANNOUNCEMENT_v0.3.0.1_CN.md  BOT_MIGRATION_TRACKER.md  CLAUDE_CLI_MISTAKE_ANALYSIS.md  DAILY_BRIEFING_QUICKSTART.sh  DEPLOYMENT_v0.2.4.2.md  DEPLOYMENT_v0.3.0.1.md  DEPLOY_QUICKSTART_v0.2.4.2.sh  Dockerfile  Dockerfile.v1.0.8-test  FINANCIAL_MCP_INTEGRATION.md  HOTFIX_v0.2.4.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_REPORT.html  LOCAL_TESTING_GUIDE.md  MENU_ENGINEERING_TECHNICAL_SUMMARY.md  MULTI_LLM_PROVIDER_GUIDE.md  PHASE1_TEST_RESULTS.md  PHASE2_TEST_RESULTS.md  QUICK_LOCAL_TEST.md  README.md  REGISTRY_COMPARISON.md  SKILLS_CHANGES_SUMMARY.md  SKILLS_COMPARISON_TEST_PLAN.md  SUPABASE_DEPLOYMENT_GUIDE.md  SUPABASE_SCHEMA.md  TESTING_COMPLETE.md  TROUBLESHOOTING.md  (+39 more)
ai-bot/archive/: AGENTIC_PLAN_LOADING.md  AGENT_SDK_MIGRATION_COMPLETE.md  AGENT_SDK_PRACTICAL_GUIDE.md  (+72 more)
(+178 files in other folders)
