[project]
name = "campfire-skills-mcp"
version = "0.1.0"
description = "Custom Skills MCP for progressive disclosure in Campfire AI Bot"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
